--- a/pandas_basics_learning.ipynb
+++ b/pandas_basics_learning.ipynb
@@ -2674,9 +2674,9 @@
           "height": 175
         },
         "id": "N5Arj82Zpmj2",
-        "outputId": "b8062406-81b1-4368-f45d-7ce947430fed"
+        "outputId": "4779dae3-3540-47dd-8250-415d7d321cc5"
       },
-      "execution_count": 1,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2690,7 +2690,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ba401337-19db-4bc5-af15-dc9059980394\">\n",
+              "  <div id=\"df-ad157e09-99b7-49b4-95f4-aa10e3fc5619\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2743,7 +2743,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ba401337-19db-4bc5-af15-dc9059980394')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad157e09-99b7-49b4-95f4-aa10e3fc5619')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2794,12 +2794,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ba401337-19db-4bc5-af15-dc9059980394 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ad157e09-99b7-49b4-95f4-aa10e3fc5619 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ba401337-19db-4bc5-af15-dc9059980394');\n",
+              "          const element = document.querySelector('#df-ad157e09-99b7-49b4-95f4-aa10e3fc5619');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2843,7 +2843,7 @@
         "id": "iSN_sQdLp2MV",
         "outputId": "5e480917-f06d-4645-e382-50c44e445516"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2875,7 +2875,7 @@
         "id": "NbUfPhVuqRTV",
         "outputId": "ed9934fb-b2e2-4b08-feb0-179400b880fe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2906,7 +2906,7 @@
         },
         "outputId": "34790f79-28c3-48c3-bd09-65dd521fb12a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2943,7 +2943,7 @@
         "id": "AUDNtSBOsBuh",
         "outputId": "facd470c-373a-4985-e8e1-a9d0084ba915"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2982,7 +2982,7 @@
         "id": "uRy-cK78qtVT",
         "outputId": "e5b8c0a6-0eb0-4a2d-d624-45f43e0b0157"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3020,7 +3020,7 @@
         "id": "rXT_EMgfrAtk",
         "outputId": "a83161e1-fcb3-4557-e808-9a453b5990db"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3063,7 +3063,7 @@
         },
         "outputId": "9b09ad22-fa35-43e8-e10b-2d4facd11d1c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3089,6 +3089,68 @@
           "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CSV TO JSON**"
+      ],
+      "metadata": {
+        "id": "-o0y9ejOcrRi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "df = pd.read_csv (r'testing.csv')\n",
+        "df.to_json (r'test.json')\n",
+        "df.to_json"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bzxrcpeBa3L0",
+        "outputId": "5d94582d-e3a0-4ade-a636-0e9215e223ce"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method NDFrame.to_json of    Unnamed: 0  col1 col2 col3\n",
+              "0           0     1    a    q\n",
+              "1           1     2    x    w\n",
+              "2           2     3    e    y\n",
+              "3           3     4    f    v>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#https://datatofish.com/csv-to-json-string-python/"
+      ],
+      "metadata": {
+        "id": "3g6T4H8xcHP8"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "svQp9syacLn7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
