--- a/pandas_basics_learning.ipynb
+++ b/pandas_basics_learning.ipynb
@@ -2674,9 +2674,9 @@
           "height": 175
         },
         "id": "N5Arj82Zpmj2",
-        "outputId": "4779dae3-3540-47dd-8250-415d7d321cc5"
+        "outputId": "9da470b7-f332-4982-d93b-468b1b7dea0e"
       },
-      "execution_count": 35,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2690,7 +2690,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ad157e09-99b7-49b4-95f4-aa10e3fc5619\">\n",
+              "  <div id=\"df-1bbfaa6a-7848-470d-bccb-abcb32d71238\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2743,7 +2743,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad157e09-99b7-49b4-95f4-aa10e3fc5619')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1bbfaa6a-7848-470d-bccb-abcb32d71238')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2794,12 +2794,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ad157e09-99b7-49b4-95f4-aa10e3fc5619 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1bbfaa6a-7848-470d-bccb-abcb32d71238 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ad157e09-99b7-49b4-95f4-aa10e3fc5619');\n",
+              "          const element = document.querySelector('#df-1bbfaa6a-7848-470d-bccb-abcb32d71238');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3061,19 +3061,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b09ad22-fa35-43e8-e10b-2d4facd11d1c"
+        "outputId": "a7efe5f8-f0e2-465f-a468-7935922dcf5a"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Unnamed: 0  col1  col2 col3\n",
-            "0           0     1     a    q\n",
-            "1           1     2     x    w\n",
-            "2           2     3  text    y\n",
-            "3           3     4     f    v\n",
+            "   Unnamed: 0  col1 col2 col3\n",
+            "0           0     1    a    q\n",
+            "1           1     2    x    w\n",
+            "2           2     3    e    y\n",
+            "3           3     4    f    v\n",
             "[1, 2, 3, 4]\n",
             "(1, 2, 3, 4)\n"
           ]
@@ -3086,7 +3086,39 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "dataset = pd.read_csv('testing.csv')\n",
+        "ftCol = dataset.iloc[:, 0].values\n",
+        "ftCol\n",
+        "ftCol = dataset.iloc[:, 1].values\n",
+        "ftCol"
+      ],
+      "metadata": {
+        "id": "4qRmW5GY13lF",
+        "outputId": "48e7a3ab-9841-4d88-e8cd-3e06d0b9ca06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     },
@@ -3114,7 +3146,7 @@
         "id": "bzxrcpeBa3L0",
         "outputId": "5d94582d-e3a0-4ade-a636-0e9215e223ce"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3140,7 +3172,7 @@
       "metadata": {
         "id": "3g6T4H8xcHP8"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
