--- a/pandas_merging.ipynb
+++ b/pandas_merging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPczndzC3Vfje0sKMnRJKO2",
+      "authorship_tag": "ABX9TyMVU9V2ZItgwEv4ZaV4BC19",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2641,7 +2641,7 @@
         "id": "vXyg94thkLP6",
         "outputId": "685687fc-2313-4a8b-b527-5de5ead80bf8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2836,7 +2836,7 @@
         "id": "puyAw5-9mvhv",
         "outputId": "0bbe9dd8-e0d6-424b-c1e3-1f3b6661cd42"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2849,6 +2849,247 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import pandas with shortcut 'pd'\n",
+        "import pandas as pd\n",
+        "\n",
+        "# read_csv function which is used to read the required CSV file\n",
+        "data = pd.read_csv('text.csv')\n",
+        "data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 81
+        },
+        "id": "lMKqb8D2702E",
+        "outputId": "bfdccb25-c307-495e-f720-23c95492378d"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   Unnamed: 0  PageNo                                               Text\n",
+              "0           0  page_1  ['IomeGoods', 'THE VILLAGE @ CINCO RANCH', '23..."
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-caf757f8-0a63-4bf4-92d0-c14c94143848\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>PageNo</th>\n",
+              "      <th>Text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>page_1</td>\n",
+              "      <td>['IomeGoods', 'THE VILLAGE @ CINCO RANCH', '23...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-caf757f8-0a63-4bf4-92d0-c14c94143848')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-caf757f8-0a63-4bf4-92d0-c14c94143848 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-caf757f8-0a63-4bf4-92d0-c14c94143848');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Adding break tag**"
+      ],
+      "metadata": {
+        "id": "FBEpSWRRBndT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['Text'] = data['Text'].str.replace(r',', ',</br>')"
+      ],
+      "metadata": {
+        "id": "iXYHznl1AxGJ"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Removing specific speacila charaters from csv file**"
+      ],
+      "metadata": {
+        "id": "TAhmP9djBqmS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['Text']= data['Text'].str.replace(r'[^A-Za-z0-9,</>]+', '')\n",
+        "data['Text'].to_csv('header.csv', index=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "36YIpLB69zEe",
+        "outputId": "d8dad9d9-0848-4dd4-975d-db760369dcd0"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-56-2081db40b06f>:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "  data['Text']= data['Text'].str.replace(r'[^A-Za-z0-9,</>]+', '')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Removing all special characters**"
+      ],
+      "metadata": {
+        "id": "MBm9wlr0ByTa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "p = re.compile(r'[^\\w\\s]+')\n",
+        "data['Text'] = [p.sub('', x) for x in data['Text'].tolist()]\n",
+        "data['Text'].to_csv('header1.csv')"
+      ],
+      "metadata": {
+        "id": "jyyD3Qrg7-qq"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string\n",
+        "\n",
+        "punct = '!\"#$%&\\'()*+-./:;<=>?@[\\\\]^_`{}~'   # `|` is not present here\n",
+        "transtab = str.maketrans(dict.fromkeys(punct, ''))\n",
+        "\n",
+        "data['Text'] = '|'.join(data['Text'].tolist()).translate(transtab).split('|')\n",
+        "data['Text'].to_csv('header1.csv')"
+      ],
+      "metadata": {
+        "id": "ly1dNP_P_mRY"
+      },
+      "execution_count": 38,
+      "outputs": []
     }
   ]
 }
