--- a/pandas_merging.ipynb
+++ b/pandas_merging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVU9V2ZItgwEv4ZaV4BC19",
+      "authorship_tag": "ABX9TyPuVFIBogBIdFIc+IQ5xq6N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2868,7 +2868,7 @@
         "id": "lMKqb8D2702E",
         "outputId": "bfdccb25-c307-495e-f720-23c95492378d"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3014,7 +3014,7 @@
       "metadata": {
         "id": "iXYHznl1AxGJ"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3039,7 +3039,7 @@
         "id": "36YIpLB69zEe",
         "outputId": "d8dad9d9-0848-4dd4-975d-db760369dcd0"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3071,7 +3071,7 @@
       "metadata": {
         "id": "jyyD3Qrg7-qq"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3088,8 +3088,155 @@
       "metadata": {
         "id": "ly1dNP_P_mRY"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**slicing keyword till sale or regular sale**"
+      ],
+      "metadata": {
+        "id": "3R_xDA_gC4NY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#dataframe creating method\n",
+        "import pandas as pd \n",
+        "# List1 \n",
+        "lst = [['apple', 'red', 11], ['grape', 'green', 22], ['orange', 'orange', 33], ['mango', 'yellow', 44]] \n",
+        "df = pd.DataFrame(lst, columns =['Fruits', 'Color', 'Value']) \n",
+        "print(df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h2TvnVGKFlNj",
+        "outputId": "8cacfcea-cfb2-4724-e04e-5fb3a825fadb"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Fruits   Color  Value\n",
+            "0   apple     red     11\n",
+            "1   grape   green     22\n",
+            "2  orange  orange     33\n",
+            "3   mango  yellow     44\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#slicing keywords\n",
+        "import pandas as pd\n",
+        "import re\n",
+        "# reading the csv file\n",
+        "df = pd.read_csv(\"texts.csv\")\n",
+        "#print(df)\n",
+        "var = df['Text']\n",
+        "var\n",
+        "a = []\n",
+        "#print(var)\n",
+        "for x in var:\n",
+        "  #print(x)\n",
+        "  #c = x.index(\"REGULAR SALE\")\n",
+        "  #print(c)\n",
+        "  c = 106\n",
+        "  #print(x[0:c]+']')\n",
+        "  b = x[0:c-1]\n",
+        "  a.append(b)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1alw3T9AAZPb",
+        "outputId": "24da95ac-df32-439a-9591-c496cad652f2"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\"['IomeGoods', 'THE VILLAGE @ CINCO RANCH', '23518 WESTHEIMER PARKWAY', 'KATY, TX 77494', '281-574-1720', \"]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#dataframe creating method\n",
+        "import pandas as pd \n",
+        "# List1 \n",
+        "lst = a\n",
+        "df = pd.DataFrame(lst, columns =['Text']) \n",
+        "print(df)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xDW1fK0wGCXz",
+        "outputId": "a2be12ba-fb93-4e03-e5c7-0acd9a8ddc24"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                                Text\n",
+            "0  ['IomeGoods', 'THE VILLAGE @ CINCO RANCH', '23...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Text'] = df['Text'].str.replace(r',', ',</br>')"
+      ],
+      "metadata": {
+        "id": "OtZ6_qL9GSzZ"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Text']= df['Text'].str.replace(r'[^A-Za-z0-9,</>]+', '')\n",
+        "df['Text'].to_csv('header.csv', index=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DjLgpB4BGXUQ",
+        "outputId": "e4bfe46b-3378-4f04-b124-14283ef60dc7"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-34-d2d0f16563f3>:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "  df['Text']= df['Text'].str.replace(r'[^A-Za-z0-9,</>]+', '')\n"
+          ]
+        }
+      ]
     }
   ]
 }
