--- a/pandas_merging.ipynb
+++ b/pandas_merging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuVFIBogBIdFIc+IQ5xq6N",
+      "authorship_tag": "ABX9TyOXg+LNrmdMX18YbxiMWz5f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3139,7 +3139,7 @@
         "import pandas as pd\n",
         "import re\n",
         "# reading the csv file\n",
-        "df = pd.read_csv(\"texts.csv\")\n",
+        "df = pd.read_csv(\"text.csv\")\n",
         "#print(df)\n",
         "var = df['Text']\n",
         "var\n",
@@ -3160,9 +3160,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1alw3T9AAZPb",
-        "outputId": "24da95ac-df32-439a-9591-c496cad652f2"
+        "outputId": "7f53894a-21fe-41de-cbce-c86d4cab621d"
       },
-      "execution_count": 31,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -3188,9 +3188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDW1fK0wGCXz",
-        "outputId": "a2be12ba-fb93-4e03-e5c7-0acd9a8ddc24"
+        "outputId": "0a8b5d87-20af-40cb-fbf5-0ee4c1ca9d8c"
       },
-      "execution_count": 32,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -3210,33 +3210,20 @@
       "metadata": {
         "id": "OtZ6_qL9GSzZ"
       },
-      "execution_count": 33,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df['Text']= df['Text'].str.replace(r'[^A-Za-z0-9,</>]+', '')\n",
+        "df['Text']= df['Text'].str.replace(r'[^A-Za-z0-9,</>]+', '', regex=True)\n",
         "df['Text'].to_csv('header.csv', index=False)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DjLgpB4BGXUQ",
-        "outputId": "e4bfe46b-3378-4f04-b124-14283ef60dc7"
+        "id": "DjLgpB4BGXUQ"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-34-d2d0f16563f3>:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-            "  df['Text']= df['Text'].str.replace(r'[^A-Za-z0-9,</>]+', '')\n"
-          ]
-        }
-      ]
+      "execution_count": 43,
+      "outputs": []
     }
   ]
 }
